@@ -1,3 +1,9 @@
+2021-03-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Improve handling of iy.
+
 2021-03-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
